#8 added location's requests
