# src/controllers/location.controller.ts
@@ -1,5 +1,10 @@
-import { Get, Route, Tags } from "tsoa";
+import { Body, Delete, Get, Post, Put, Route, Tags } from "tsoa";
 import { LocationService } from "../services/location.service";
+import {
+  TLocationCreatePayload,
+  TLocationDeletePayload,
+  TLocationUpdatePayload,
+} from "../types/location.types";
 
 @Route("/api/location")
 @Tags("Locations")
@@ -9,5 +14,20 @@ export class LocationController {
   @Get("/all")
   async getAllLocations() {
     return this.locationService.getAllLocations();
+  }
+
+  @Post("/create")
+  async createLocation(@Body() payload: TLocationCreatePayload) {
+    return this.locationService.createLocation(payload);
+  }
+
+  @Put("/update")
+  async updateLocation(@Body() payload: TLocationUpdatePayload) {
+    return this.locationService.updateLocation(payload);
+  }
+
+  @Delete("/delete")
+  async deleteLocation(@Body() payload: TLocationDeletePayload) {
+    return this.locationService.deleteLocation(payload);
   }
 }
