# src/types/location.types.ts
@@ -1,0 +1,18 @@
+export type TLocationCreatePayload = {
+  title?: string;
+  url?: string;
+  address?: string;
+  previewId?: number;
+};
+
+export type TLocationUpdatePayload = {
+  id: number;
+  title?: string | null;
+  url?: string | null;
+  address?: string | null;
+  previewId?: number | null;
+};
+
+export type TLocationDeletePayload = {
+  id: number;
+};
